Avoid vertical scroll on mobile
Make the body full height via flex-grow without the issues of 100vh (includes
address bar on mobile) or 100% (cuts of content higher than 100%).

--- a/public/blocking.css
+++ b/public/blocking.css
@@ -1,9 +1,9 @@
-html, body {
-    /* height: 100%; */
-    min-height: 100vh;
-}
-
 html {
+    min-height: 100%;
+    /* for making the body full height via flex-grow without the issues of 100vh (includes address bar on mobile) or
+    100% (cuts of content higher than 100%) */
+    display: flex;
+    flex-direction: column;
     font-size: 8px;
     font-family: Muli, system-ui, sans-serif;
     -webkit-font-smoothing: antialiased;
@@ -15,13 +15,14 @@ html {
 }
 
 body {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    margin: 0;
+    padding: 0 2rem;
     color: var(--nimiq-blue);
     background: var(--nimiq-gray);
     background-image: var(--nimiq-gray-bg);
-    margin: 0;
-    display: flex;
-    flex-direction: column;
-    padding: 0 2rem;
 }
 
 body > header,
